--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -36,6 +36,11 @@ html {
     }
   }
 }
-.content::content {
-   content: map-get($widget-sizes, small, medium, large);
+.products {
+  @debug map-get($widget-sizes , size );
 }
+
+
+
+
+
