--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -4,4 +4,4 @@
 
 $primary: #0c4bfa;
 
-$widget-sizes: ("small": 30px, "medium": 50px, "large": 100px);
+$widget-sizes: (small: 60px, large: 120px);
