--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -4,4 +4,8 @@
 
 $primary: #0c4bfa;
 
-$widget-sizes: (small: 60px, large: 120px);
+$widget-sizes: ("small": 60px,
+"medium": 100px,
+"large": 120px);
+
+
