--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -47,3 +47,8 @@
   ::-moz-placeholder          {@content}
   :-ms-input-placeholder      {@content}
 }
+
+@mixin sizes {
+  font-size: map-get($widget-sizes, small);
+  font-size: map-get($widget-sizes, large);
+}
