--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -4,8 +4,7 @@
 
 $primary: #0c4bfa;
 
-$widget-sizes: ("small": 60px,
-"medium": 100px,
-"large": 120px);
+$widget-sizes: ('60px', '100px', '120px');
+
 
 
